# SpecularLatens

./: .gitignore  CMakeLists.txt  README.md  build.bat  index.html
ScreenMirror_Full_Release/: INSTRUCOES_FULL.txt
ScreenMirror_Full_v3.2/: INSTRUCOES_FULL.txt
ScreenMirror_Full_v3.4/: INSTRUCOES_FULL.txt
ScreenMirror_Full_v3.5/: INSTRUCOES_FULL.txt
ScreenMirror_Full_v3.6/: INSTRUCOES_FULL.txt
ScreenMirror_Full_v3.7/: INSTRUCOES_FULL.txt
assets/css/: style.css
assets/js/: script.js
src/: RCa16316  RCa23496  RCa28468  main.cpp  manifest.xml  resource.h  resource.rc
v1_stable/: build.bat  main.cpp
